# AMQP-CPP

examples/: CMakeLists.txt  send.cpp
examples/send/: CMakeLists.txt  sendlibev.cpp  sendlibevent.cpp
